# Noesis

./: .coverage  .daimon.pid  .gitignore  README.md  cli_tester.py  display_server.py  docker-compose.yml  noesis  wake_daimon.sh
backend/services/metacognitive_reflector/: README.md  __init__.py  main.py  main_v2.py  pyproject.toml
backend/services/metacognitive_reflector/api/: dependencies.py  routes.py
backend/services/metacognitive_reflector/core/: memory_client.py  reflector.py
backend/services/metacognitive_reflector/core/judges/: arbiter.py  base.py  dike.py  sophia.py  veritas.py
backend/services/metacognitive_reflector/core/punishment/: base_handler.py  executor.py
backend/services/metacognitive_reflector/src/metacognitive_reflector/: config.py  main.py
backend/services/metacognitive_reflector/src/metacognitive_reflector/api/: dependencies.py  routes.py
backend/services/metacognitive_reflector/src/metacognitive_reflector/core/: __init__.py  memory_client.py  memory_models.py  reflector.py  self_reflection.py
backend/services/metacognitive_reflector/src/metacognitive_reflector/core/history/: __init__.py
backend/services/metacognitive_reflector/src/metacognitive_reflector/core/judges/: arbiter.py  dike.py  sophia.py  veritas.py  voting.py
backend/services/metacognitive_reflector/src/metacognitive_reflector/core/memory/: __init__.py  client.py  session.py
backend/services/metacognitive_reflector/src/metacognitive_reflector/llm/: __init__.py  client.py  config.py
backend/services/metacognitive_reflector/tests/: test_coverage_storage.py
(+368 files in other folders)
