[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metacognitive-reflector"
version = "2.0.0"
description = "MAXIMUS 2.0 Metacognitive Reflector Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["metacognitive_reflector*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.pylint.messages_control]
disable = [
    "duplicate-code",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-instance-attributes",
    "too-few-public-methods",
    "broad-exception-caught",
    "unused-argument",
    "redefined-outer-name",
    "import-error",
    "protected-access",
    "import-outside-toplevel",
    "unused-variable",
    "unused-import",
    "line-too-long",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 10
max-locals = 20
max-attributes = 12

[tool.coverage.run]
omit = [
    "main.py",
    "main_v2.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
